# Maya

./: LICENSE  README.md
Linux/: CMakeLists.txt
Linux/cgcmake/modules/: FindMaya.cmake
Linux/src/: CMakeLists.txt  baconDoubleBezier.cpp  baconDualHinge.cpp  baconLookAt.cpp  baconMath.h  baconShapeBone.cpp  baconShapeBone.cpp.old1  baconShapeBoneVisuals.h  baconSlidingPivot.cpp
MacOS/: README.txt
MacOS/src/: CMakeLists.txt  Ids.txt  bacon2BoneIK.cpp  bacon3BoneIK.cpp  baconBlend.cpp  baconMatrixCompose.cpp  baconRoll.cpp  baconShapeBone.cpp  baconShapeLine.cpp  baconShapeRibbon.cpp  boneDynamicsNode.cpp
Win64/: CMakeLists.txt  HowToInstall.txt
Win64/cmake/: devkit.cmake  gpuCache.cmake  mayald.cmake  pluginEntry.cmake
Win64/cmake/PySide2-5.15.2.1/: PySide2Config.cmake  PySide2Config.cp310-win_amd64.cmake  PySide2Targets-relwithdebinfo.cmake  PySide2Targets.cmake
Win64/cmake/Shiboken2-5.15.2.1/: Shiboken2Config.cmake  Shiboken2Config.cp310-win_amd64.cmake  Shiboken2ConfigVersion.cmake  Shiboken2Targets-relwithdebinfo.cmake  Shiboken2Targets.cmake  shiboken_helpers.cmake
Win64/cmake/modules/: FindAlembic.cmake  FindArnold.cmake  FindD3DX11Effects.cmake  FindDirectXSDK.cmake
Win64/modules/: Bacon-Strip.mod
Win64/modules/Rigonomicon/plugins/2024/: baconAlign.mll  baconArc.mll  baconDoubleBezier.mll  baconLookAt.mll  baconMatrixCompose.mll  baconPreheat.mll  baconShapeArc.mll  baconShapeBone.mll  baconShapeLine.mll  baconShapeRibbon.mll  baconUVProjection.mll
Win64/modules/Rigonomicon/scripts/: userSetup.py
Win64/plug-ins/2024/: bacon2BoneIK.mll  bacon3BoneIK.mll  baconAlign.mll  baconBlend.mll  baconDoubleBezier.mll  baconDualHinge.mll  baconLookAt.mll  baconMatrixCompose.mll  baconPreheat.mll  baconRibbon.mll  baconRoll.mll  baconShapeBone.mll  baconShapeLine.mll  baconShapeRibbon.mll  baconSlidingPivot.mll  baconTransformDecompose.mll  baconUVProjection.mll
Win64/plug-ins/2025/: bacon2BoneIK.mll  bacon3BoneIK.mll  baconAlign.mll  baconBlend.mll  baconDoubleBezier.mll  baconDualHinge.mll  baconLookAt.mll  baconMatrixCompose.mll  baconPreheat.mll  baconRibbon.mll  baconRoll.mll  baconShapeBone.mll  baconShapeLine.mll  baconShapeRibbon.mll  baconSlidingPivot.mll  baconTransformDecompose.mll  baconUVProjection.mll
Win64/src/: CMakeLists.txt  baconAlign.cpp  baconPreheat.cpp  baconRibbon.cpp  baconTransformDecompose.cpp  baconUVProjection.cpp
modules/Rigonomicon/plugins/: baconBits.py  baconRig.py  baconViseme.py
modules/Rigonomicon/plugins/2024/: bacon2BoneIK.mll  bacon3BoneIK.mll  baconBlend.mll  baconDualHinge.mll  baconRibbon.mll  baconRoll.mll  baconSlidingPivot.mll  baconTransformDecompose.mll
modules/Rigonomicon/shelves/: shelf_Rigonomicon.mel
